--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
   font-size: 1.2rem;
   color: #888;
 }
+    #waste-counter {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.9rem;
+  color: #666;
+  background-color: #1a1a1a;
+  padding: 6px 10px;
+  border-radius: 6px;
+  border: 1px solid #333;
+  z-index: 999;
+}
   </style>
 </head>
 <body>
@@ -80,7 +92,16 @@
       }
     }
   });
-</script>
+    // Time tracking
+  let secondsWasted = 0;
+  const counter = document.getElementById("waste-counter");
 
+  setInterval(() => {
+    secondsWasted++;
+    const minutes = Math.floor(secondsWasted / 60);
+    counter.textContent = `Minutes of life wasted here: ${minutes}`;
+  }, 1000);
+</script>
+<div id="waste-counter">Minutes of life wasted here: 0</div>
 </body>
 </html>
