--- a/index.html
+++ b/index.html
@@ -12,151 +12,173 @@
       margin: 0;
       padding: 0;
     }
+
     header {
       padding: 1rem;
       text-align: center;
       background-color: #1a1a1a;
     }
+
     main {
       padding: 2rem;
       text-align: center;
     }
-    .post {
-  border: 1px solid #333;
-  margin: 2rem auto;
-  width: 300px;
-  height: 300px;
-  background-color: #1c1c1c;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.2rem;
-  color: #888;
-  flex-direction: column;
-  padding: 1rem;
-}
-    #waste-counter {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  font-size: 0.9rem;
-  color: #666;
-  background-color: #1a1a1a;
-  padding: 6px 10px;
-  border-radius: 6px;
-  border: 1px solid #333;
-  z-index: 999;
-}
-    .like-button {
-  margin-top: 10px;
-  padding: 6px 12px;
-  background-color: #2a2a2a;
-  color: #f44;
-  border: 1px solid #444;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 0.9rem;
-}
-.like-button:hover {
-  background-color: #3a3a3a;
-}
 
+    .post {
+      border: 1px solid #333;
+      margin: 2rem auto;
+      width: 300px;
+      height: 300px;
+      background-color: #1c1c1c;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+      color: #888;
+      flex-direction: column;
+      padding: 1rem;
+    }
+
+    #waste-counter,
+    #like-counter {
+      position: fixed;
+      font-size: 0.9rem;
+      color: #666;
+      background-color: #1a1a1a;
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      z-index: 999;
+    }
+
+    #waste-counter {
+      bottom: 10px;
+      right: 10px;
+    }
+
+    #like-counter {
+      bottom: 10px;
+      left: 10px;
+    }
+
+    .like-button {
+      margin-top: 10px;
+      padding: 6px 12px;
+      background-color: #2a2a2a;
+      color: #f44;
+      border: 1px solid #444;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    .like-button:hover {
+      background-color: #3a3a3a;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>InstaVoid</h1>
-<p>Welcome back, scroller. The void missed you.</p>
+    <p>Welcome back, scroller. The void missed you.</p>
   </header>
+
   <main id="feed">
-  <!-- Posts will be added here by JavaScript -->
-</main>
-<div id="waste-counter">Minutes of life wasted here: 0</div>
-<script>
-  const feed = document.getElementById("feed");
-const fakeUsernames = [
-  "void_vibes",
-  "scroller3000",
-  "ghostfeed",
-  "lostinloop",
-  "tapmaster",
-  "doomposter",
-  "feed.exe",
-  "no_signal",
-  "lurkerbot",
-  "user_0000"
-];
+    <!-- Posts will be added here by JavaScript -->
+  </main>
 
-  const fakeMessages = [
-    "[ Empty Post ]",
-    "[ You’re still here? ]",
-    "[ This means nothing. ]",
-    "[ The feed is feeding itself. ]",
-    "[ Keep going. Or don’t. ]",
-    "[ Static. Again. ]",
-    "[ Are you okay? ]",
-    "[ Just one more... nothing. ]"
-  ];
+  <div id="waste-counter">Minutes of life wasted here: 0</div>
+  <div id="like-counter">Likes given: 0</div>
 
-function createPost(message) {
-  const post = document.createElement("div");
-  post.className = "post";
+  <script>
+    const feed = document.getElementById("feed");
 
-  const username = fakeUsernames[Math.floor(Math.random() * fakeUsernames.length)];
-  const avatarUrl = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
+    const fakeUsernames = [
+      "void_vibes",
+      "scroller3000",
+      "ghostfeed",
+      "lostinloop",
+      "tapmaster",
+      "doomposter",
+      "feed.exe",
+      "no_signal",
+      "lurkerbot",
+      "user_0000"
+    ];
 
-  post.innerHTML = `
-  <div style="display: flex; align-items: center; margin-bottom: 10px; gap: 10px;">
-    <img src="${avatarUrl}" alt="avatar" style="width: 40px; height: 40px; border-radius: 50%;">
-    <span style="font-weight: bold; color: #aaa;">@${username}</span>
-  </div>
-  <div>${message}</div>
-  <button class="like-button">❤️ Like</button>
-`;
+    const fakeMessages = [
+      "[ Empty Post ]",
+      "[ You’re still here? ]",
+      "[ This means nothing. ]",
+      "[ The feed is feeding itself. ]",
+      "[ Keep going. Or don’t. ]",
+      "[ Static. Again. ]",
+      "[ Are you okay? ]",
+      "[ Just one more... nothing. ]"
+    ];
 
-  feed.appendChild(post);
+    // Local storage: Likes
+    let likesGiven = parseInt(localStorage.getItem("likesGiven")) || 0;
+    const likeCounter = document.getElementById("like-counter");
+    likeCounter.textContent = `Likes given: ${likesGiven}`;
 
-  const likeBtn = post.querySelector(".like-button");
-likeBtn.addEventListener("click", () => {
-  alert("This did nothing.");
-});
+    function createPost(message) {
+      const post = document.createElement("div");
+      post.className = "post";
 
-}
+      const username = fakeUsernames[Math.floor(Math.random() * fakeUsernames.length)];
+      const avatarUrl = `https://api.dicebear.com/7.x/personas/svg?seed=${username}`;
 
-  // Generate initial posts
-  for (let i = 0; i < 10; i++) {
-    const msg = fakeMessages[i % fakeMessages.length];
-    createPost(msg);
-  }
+      post.innerHTML = `
+        <div style="display: flex; align-items: center; margin-bottom: 10px; gap: 10px;">
+          <img src="${avatarUrl}" alt="avatar" style="width: 40px; height: 40px; border-radius: 50%;">
+          <span style="font-weight: bold; color: #aaa;">@${username}</span>
+        </div>
+        <div>${message}</div>
+        <button class="like-button">❤️ Like</button>
+      `;
 
-  // Load more posts when user scrolls to bottom
-  window.addEventListener("scroll", () => {
-    if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 50) {
-      for (let i = 0; i < 5; i++) {
-        const msg = fakeMessages[Math.floor(Math.random() * fakeMessages.length)];
-        createPost(msg);
-      }
+      feed.appendChild(post);
+
+      const likeBtn = post.querySelector(".like-button");
+      likeBtn.addEventListener("click", () => {
+        likesGiven++;
+        localStorage.setItem("likesGiven", likesGiven);
+        likeCounter.textContent = `Likes given: ${likesGiven}`;
+        likeBtn.textContent = "❤️ Liked";
+        setTimeout(() => {
+          likeBtn.textContent = "❤️ Like";
+        }, 1500);
+      });
     }
-  });
-    // Time tracking
+
+    // Generate initial posts
+    for (let i = 0; i < 10; i++) {
+      const msg = fakeMessages[i % fakeMessages.length];
+      createPost(msg);
+    }
+
+    // Load more posts when user scrolls to bottom
+    window.addEventListener("scroll", () => {
+      if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 50) {
+        for (let i = 0; i < 5; i++) {
+          const msg = fakeMessages[Math.floor(Math.random() * fakeMessages.length)];
+          createPost(msg);
+        }
+      }
+    });
+
+    // Local storage: Time tracking
     const counter = document.getElementById("waste-counter");
+    let secondsWasted = parseInt(localStorage.getItem("secondsWasted")) || 0;
+    counter.textContent = `Minutes of life wasted here: ${Math.floor(secondsWasted / 60)}`;
 
-  // Load saved time from local storage or start at 0
-  let secondsWasted = parseInt(localStorage.getItem("secondsWasted")) || 0;
-
-  // Show starting time
-  counter.textContent = `Minutes of life wasted here: ${Math.floor(secondsWasted / 60)}`;
-
-  // Update every second
-  setInterval(() => {
-    secondsWasted++;
-    const minutes = Math.floor(secondsWasted / 60);
-    counter.textContent = `Minutes of life wasted here: ${minutes}`;
-    
-    // Save to local storage
-    localStorage.setItem("secondsWasted", secondsWasted);
-  }, 1000);
-
-</script>
+    setInterval(() => {
+      secondsWasted++;
+      const minutes = Math.floor(secondsWasted / 60);
+      counter.textContent = `Minutes of life wasted here: ${minutes}`;
+      localStorage.setItem("secondsWasted", secondsWasted);
+    }, 1000);
+  </script>
 </body>
 </html>
