--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
 </head>
 <body>
   <header>
-    <div class="logo">InstaVoid</div>
-    <div class="nav-icons">
-      <img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="new post" />
-      <img src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="messages" />
-    </div>
-  </header>
+  <div class="logo">InstaVoid</div>
+  <div class="nav-icons">
+    <a href="profile.html" style="color: #888; font-size: 0.9rem; margin-right: 10px; text-decoration: none;">Profile</a>
+    <img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="new post" />
+    <img src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="messages" />
+  </div>
+</header>
 
   <div class="stories">
     <div class="story"></div>
