--- a/index.html
+++ b/index.html
@@ -32,31 +32,22 @@
     .nav-icons {
       display: flex;
       align-items: center;
-    }
-
-    .nav-icons a {
-      display: inline-block;
-      padding: 6px 12px;
-      background-color: #2a2a2a;
-      border: 1px solid #444;
-      border-radius: 8px;
-      color: #ccc;
-      font-size: 0.9rem;
-      margin-right: 12px;
-      text-decoration: none;
-      transition: background 0.2s;
-    }
-
-    .nav-icons a:hover {
-      background-color: #3a3a3a;
+      gap: 15px;
     }
 
     .nav-icons img {
       width: 24px;
       height: 24px;
-      margin-left: 10px;
       cursor: pointer;
       filter: invert(60%);
+    }
+
+    .profile-pic {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      cursor: pointer;
+      border: 2px solid #555;
     }
 
     .stories {
@@ -155,9 +146,11 @@
   <header>
     <div class="logo">InstaVoid</div>
     <div class="nav-icons">
-      <a href="profile.html">Profile</a>
       <img src="https://cdn-icons-png.flaticon.com/512/992/992651.png" alt="new post" />
       <img src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="messages" />
+      <a href="profile.html">
+        <img src="https://api.dicebear.com/7.x/personas/svg?seed=you" alt="profile" class="profile-pic">
+      </a>
     </div>
   </header>
 
