--- a/profile.html
+++ b/profile.html
@@ -14,22 +14,28 @@
     }
 
     header {
-      padding: 1rem;
-      border-bottom: 1px solid #333;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 0.8rem 1rem;
+      background-color: #1a1a1a;
+      border-bottom: 1px solid #333;
     }
 
-    header h1 {
-      font-size: 1.4rem;
-      margin: 0;
-    }
-
-    a {
-      color: #888;
+    .back-link {
       text-decoration: none;
-      font-size: 0.9rem;
+      color: #ccc;
+      font-size: 1.2rem;
+    }
+
+    .username {
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #fff;
+    }
+
+    .spacer {
+      width: 24px; /* matches arrow size to center username */
     }
 
     .profile {
@@ -100,8 +106,9 @@
 </head>
 <body>
   <header>
-    <h1>@you</h1>
-    <a href="index.html">← Back</a>
+    <a href="index.html" class="back-link">←</a>
+    <div class="username">@you</div>
+    <div class="spacer"></div>
   </header>
 
   <div class="profile">
