--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
     main {
       padding: 1rem;
+      padding-bottom: 4rem;
     }
 
     .post {
@@ -132,13 +133,30 @@
     }
 
     #waste-counter {
-      bottom: 10px;
+      bottom: 50px;
       right: 10px;
     }
 
     #like-counter {
-      bottom: 10px;
+      bottom: 50px;
       left: 10px;
+    }
+
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+    }
+
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
     }
   </style>
 </head>
@@ -169,6 +187,14 @@
 
   <div id="waste-counter">Minutes of life wasted here: 0</div>
   <div id="like-counter">Likes given: 0</div>
+
+  <div class="bottom-nav">
+    <a href="index.html">🏠</a>
+    <a href="#">🔍</a>
+    <a href="#">➕</a>
+    <a href="#">❤️</a>
+    <a href="profile.html">👤</a>
+  </div>
 
   <script>
     const feed = document.getElementById("feed");
