--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
     <div class="story"></div>
   </div>
 
-  <main id="feed">
-    <!-- Posts will be added here by JavaScript -->
-  </main>
+  <main id="feed"></main>
 
   <div id="waste-counter">Minutes of life wasted here: 0</div>
   <div id="like-counter">Likes given: 0</div>
@@ -181,7 +179,7 @@
     <a href="index.html">🏠</a>
     <a href="#">🔍</a>
     <a href="#">➕</a>
-    <a href="#">❤️</a>
+    <a href="#">🎞️</a>
     <a href="profile.html">👤</a>
   </div>
 
