--- a/profile.html
+++ b/profile.html
@@ -150,7 +150,7 @@
     <a href="index.html">🏠</a>
     <a href="#">🔍</a>
     <a href="#">➕</a>
-    <a href="#">❤️</a>
+    <a href="#">🎞️</a>
     <a href="profile.html">👤</a>
   </div>
 
