--- a/publish.html
+++ b/publish.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Publish to Void</title>
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 1.5rem;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+
+    select, button {
+      padding: 0.6rem 1rem;
+      margin: 1rem 0;
+      font-size: 1rem;
+      background-color: #1a1a1a;
+      color: #fff;
+      border: 1px solid #444;
+      border-radius: 4px;
+    }
+
+    button {
+      cursor: pointer;
+    }
+
+    .confirmation {
+      margin-top: 1rem;
+      color: #aaa;
+      font-style: italic;
+    }
+
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+    }
+
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+  </style>
+</head>
+<body>
+  <h1>Publish an Achievement</h1>
+
+  <select id="achievementSelect">
+    <option value="">-- Select one --</option>
+  </select>
+  <br>
+  <button onclick="publishAchievement()">Post to the Void</button>
+  <div class="confirmation" id="confirmationMsg"></div>
+
+  <div class="bottom-nav">
+    <a href="index.html">🏠</a>
+    <a href="#">🔍</a>
+    <a href="publish.html">➕</a>
+    <a href="#">🎞️</a>
+    <a href="profile.html">👤</a>
+  </div>
+
+  <script>
+    const achievementsList = {
+      doomscroll: "Doomscrolled – Wasted over 1 minute.",
+      liker: "You Liked That – Gave 10 meaningless likes.",
+      voidpro: "Void Professional – Spent 5 minutes in the void.",
+      scroller: "Scroller Supreme – Scrolled 100 times."
+    };
+
+    const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
+    const select = document.getElementById("achievementSelect");
+
+    unlocked.forEach(key => {
+      const option = document.createElement("option");
+      option.value = key;
+      option.textContent = achievementsList[key];
+      select.appendChild(option);
+    });
+
+    function publishAchievement() {
+      const selected = select.value;
+      const msg = document.getElementById("confirmationMsg");
+
+      if (!selected) {
+        msg.textContent = "Please select an achievement first.";
+        return;
+      }
+
+      const posts = JSON.parse(localStorage.getItem("sharedPosts")) || [];
+      posts.unshift(achievementsList[selected]); // latest first
+      localStorage.setItem("sharedPosts", JSON.stringify(posts));
+
+      msg.textContent = "Your achievement has been posted to the void.";
+      select.value = "";
+    }
+  </script>
+</body>
+</html>
 
