--- a/profile.html
+++ b/profile.html
@@ -114,7 +114,7 @@
     <img src="https://api.dicebear.com/7.x/personas/svg?seed=you" alt="avatar">
     <div class="stats">
       <div class="stat">
-        <strong id="postCount">4</strong>
+        <strong id="postCount">0</strong>
         posts
       </div>
       <div class="stat">
@@ -150,22 +150,21 @@
 
     const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
     const grid = document.getElementById("achievementGrid");
+    const postCount = document.getElementById("postCount");
 
-    const all = [...unlocked].reverse().map(k => {
-      return achievementsList.find(a => a.key === k);
-    });
+    let visibleCount = 0;
 
+    // Show unlocked achievements first
     achievementsList.forEach(ach => {
-      if (!unlocked.includes(ach.key)) all.push(ach);
-    });
-
-    all.forEach(ach => {
       const div = document.createElement("div");
       const isUnlocked = unlocked.includes(ach.key);
+      if (isUnlocked) visibleCount++;
       div.className = isUnlocked ? "" : "locked";
       div.innerHTML = `<strong>${ach.name}</strong><br>${ach.desc}`;
       grid.appendChild(div);
     });
+
+    postCount.textContent = visibleCount;
   </script>
 </body>
 </html>
