--- a/search.html
+++ b/search.html
@@ -1,1 +1,220 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search the Void</title>
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
+    header {
+      text-align: center;
+      padding: 1rem;
+      background-color: #1a1a1a;
+      border-bottom: 1px solid #333;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    .container {
+      padding: 1rem;
+      padding-bottom: 6rem;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 0.6rem;
+      background-color: #1c1c1c;
+      border: 1px solid #333;
+      color: #fff;
+      border-radius: 6px;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .section-title {
+      font-size: 1rem;
+      color: #888;
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .result {
+      border: 1px solid #333;
+      background-color: #1a1a1a;
+      padding: 1rem;
+      border-radius: 6px;
+      margin-bottom: 0.8rem;
+    }
+
+    .result strong {
+      display: block;
+      margin-bottom: 0.3rem;
+      color: #00bfff;
+    }
+
+    .leaderboard-entry {
+      background-color: #1a1a1a;
+      padding: 0.8rem;
+      border: 1px solid #333;
+      border-radius: 6px;
+      margin-bottom: 0.6rem;
+      font-size: 0.9rem;
+    }
+
+    .leaderboard-entry span {
+      display: block;
+      color: #aaa;
+      margin-top: 0.2rem;
+    }
+
+    .you {
+      border-color: #00bfff;
+      box-shadow: 0 0 6px #00bfff33;
+    }
+
+    .bottom-nav {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1a1a1a;
+      border-top: 1px solid #333;
+      display: flex;
+      justify-content: space-around;
+      padding: 0.5rem 0;
+    }
+
+    .bottom-nav a {
+      color: #888;
+      text-decoration: none;
+      font-size: 1.3rem;
+    }
+  </style>
+</head>
+<body>
+  <header>Search the Void</header>
+
+  <div class="container">
+    <input type="text" id="searchInput" placeholder="Search achievements or accounts..." />
+
+    <div class="section-title">Achievements</div>
+    <div id="achievementResults"></div>
+
+    <div class="section-title">Accounts</div>
+    <div id="userResults"></div>
+
+    <div class="section-title">Leaderboard</div>
+    <div id="leaderboard"></div>
+  </div>
+
+  <div class="bottom-nav">
+    <a href="index.html">🏠</a>
+    <a href="search.html">🔍</a>
+    <a href="publish.html">➕</a>
+    <a href="reels.html">🎞️</a>
+    <a href="profile.html">👤</a>
+  </div>
+
+  <script>
+    const achievementsList = [
+      { name: "Doomscrolled", desc: "Wasted over 1 minute." },
+      { name: "You Liked That", desc: "Gave 10 meaningless likes." },
+      { name: "Void Professional", desc: "Spent 5 minutes in the void." },
+      { name: "Scroller Supreme", desc: "Scrolled 100 times." }
+    ];
+
+    const fakeUsernames = [
+      "void_vibes", "scroller3000", "ghostfeed", "lostinloop",
+      "tapmaster", "doomposter", "feed.exe", "no_signal",
+      "lurkerbot", "user_0000"
+    ];
+
+    const searchInput = document.getElementById("searchInput");
+    const achievementResults = document.getElementById("achievementResults");
+    const userResults = document.getElementById("userResults");
+    const leaderboard = document.getElementById("leaderboard");
+
+    function renderSearch(query = "") {
+      const q = query.toLowerCase();
+
+      // Achievements
+      achievementResults.innerHTML = "";
+      achievementsList.forEach(ach => {
+        if (ach.name.toLowerCase().includes(q) || ach.desc.toLowerCase().includes(q)) {
+          const div = document.createElement("div");
+          div.className = "result";
+          div.innerHTML = `<strong>${ach.name}</strong>${ach.desc}`;
+          achievementResults.appendChild(div);
+        }
+      });
+
+      // Users
+      userResults.innerHTML = "";
+      fakeUsernames.forEach(user => {
+        if (user.toLowerCase().includes(q)) {
+          const div = document.createElement("div");
+          div.className = "result";
+          div.innerHTML = `<strong>@${user}</strong>This account is void.`;
+          userResults.appendChild(div);
+        }
+      });
+    }
+
+    // Leaderboard Setup
+    const yourStats = {
+      username: "you",
+      minutes: Math.floor((parseInt(localStorage.getItem("secondsWasted")) || 0) / 60),
+      likes: parseInt(localStorage.getItem("likesGiven")) || 0,
+      scrolls: parseInt(localStorage.getItem("scrollCount")) || 0
+    };
+
+    function randomStats(seed) {
+      const base = seed.split("").reduce((a, c) => a + c.charCodeAt(0), 0);
+      return {
+        username: seed,
+        minutes: Math.floor((base * 3) % 100),
+        likes: Math.floor((base * 7) % 50),
+        scrolls: Math.floor((base * 13) % 200)
+      };
+    }
+
+    const fakeStats = fakeUsernames.map(name => randomStats(name));
+    const allUsers = [yourStats, ...fakeStats];
+
+    // Sort leaderboard by time wasted
+    allUsers.sort((a, b) => b.minutes - a.minutes);
+
+    // Display leaderboard
+    leaderboard.innerHTML = "";
+    allUsers.forEach(user => {
+      const div = document.createElement("div");
+      div.className = "leaderboard-entry";
+      if (user.username === "you") div.classList.add("you");
+
+      div.innerHTML = `
+        <strong>@${user.username}</strong>
+        <span>Minutes Wasted: ${user.minutes}</span>
+        <span>Likes Given: ${user.likes}</span>
+        <span>Scrolls: ${user.scrolls}</span>
+      `;
+      leaderboard.appendChild(div);
+    });
+
+    // Initial render
+    renderSearch();
+
+    // Live search
+    searchInput.addEventListener("input", e => {
+      renderSearch(e.target.value);
+    });
+  </script>
+</body>
+</html>
