--- a/search.html
+++ b/search.html
@@ -47,7 +47,8 @@
       margin-bottom: 0.5rem;
     }
 
-    .result {
+    .result,
+    .achievement-tile {
       border: 1px solid #333;
       background-color: #1a1a1a;
       padding: 1rem;
@@ -55,15 +56,16 @@
       margin-bottom: 0.8rem;
     }
 
-    .result strong {
+    .result strong,
+    .achievement-tile strong {
       display: block;
       margin-bottom: 0.3rem;
       color: #00bfff;
     }
 
-    .result a {
-      color: #00bfff;
-      text-decoration: none;
+    .achievement-tile.glow {
+      border: 1px solid #00bfff;
+      box-shadow: 0 0 8px #00bfff55;
     }
 
     .leaderboard-entry {
@@ -102,6 +104,17 @@
       text-decoration: none;
       font-size: 1.3rem;
     }
+
+    #showAllBtn {
+      display: block;
+      margin: 0.8rem auto 2rem;
+      background-color: #1a1a1a;
+      border: 1px solid #555;
+      padding: 0.5rem 1rem;
+      color: #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -112,6 +125,7 @@
 
     <div class="section-title">Achievements</div>
     <div id="achievementResults"></div>
+    <button id="showAllBtn">Show all achievements</button>
 
     <div class="section-title">Accounts</div>
     <div id="userResults"></div>
@@ -130,10 +144,10 @@
 
   <script>
     const achievementsList = [
-      { name: "Doomscrolled", desc: "Wasted over 1 minute." },
-      { name: "You Liked That", desc: "Gave 10 meaningless likes." },
-      { name: "Void Professional", desc: "Spent 5 minutes in the void." },
-      { name: "Scroller Supreme", desc: "Scrolled 100 times." }
+      { key: "doomscroll", name: "Doomscrolled", desc: "Wasted over 1 minute." },
+      { key: "liker", name: "You Liked That", desc: "Gave 10 meaningless likes." },
+      { key: "voidpro", name: "Void Professional", desc: "Spent 5 minutes in the void." },
+      { key: "scroller", name: "Scroller Supreme", desc: "Scrolled 100 times." }
     ];
 
     const fakeUsernames = [
@@ -146,33 +160,58 @@
     const achievementResults = document.getElementById("achievementResults");
     const userResults = document.getElementById("userResults");
     const leaderboard = document.getElementById("leaderboard");
+    const showAllBtn = document.getElementById("showAllBtn");
+
+    const unlocked = JSON.parse(localStorage.getItem("achievements")) || [];
+
+    function renderAchievements(showAll = false) {
+      achievementResults.innerHTML = "";
+
+      const list = showAll ? achievementsList : achievementsList.slice(0, 4);
+
+      list.forEach(ach => {
+        const div = document.createElement("div");
+        div.className = "achievement-tile";
+        if (unlocked.includes(ach.key)) {
+          div.classList.add("glow");
+        }
+        div.innerHTML = `<strong>${ach.name}</strong>${ach.desc}`;
+        achievementResults.appendChild(div);
+      });
+    }
+
+    showAllBtn.addEventListener("click", () => {
+      renderAchievements(true);
+      showAllBtn.style.display = "none";
+    });
 
     function renderSearch(query = "") {
       const q = query.toLowerCase();
 
-      // Achievements
-      achievementResults.innerHTML = "";
-      achievementsList.forEach(ach => {
-        if (ach.name.toLowerCase().includes(q) || ach.desc.toLowerCase().includes(q)) {
+      // Filter achievements
+      renderAchievements(true);
+      if (q) {
+        const matches = achievementsList.filter(ach =>
+          ach.name.toLowerCase().includes(q) || ach.desc.toLowerCase().includes(q)
+        );
+        achievementResults.innerHTML = "";
+        matches.forEach(ach => {
           const div = document.createElement("div");
-          div.className = "result";
+          div.className = "achievement-tile";
+          if (unlocked.includes(ach.key)) div.classList.add("glow");
           div.innerHTML = `<strong>${ach.name}</strong>${ach.desc}`;
           achievementResults.appendChild(div);
-        }
-      });
+        });
+        showAllBtn.style.display = "none";
+      }
 
-      // Users
+      // Filter users
       userResults.innerHTML = "";
       fakeUsernames.forEach(user => {
         if (user.toLowerCase().includes(q)) {
           const div = document.createElement("div");
           div.className = "result";
-          div.innerHTML = `
-            <strong>
-              <a href="user.html?username=${user}">@${user}</a>
-            </strong>
-            This account is void.
-          `;
+          div.innerHTML = `<strong><a href="user.html?username=${user}">@${user}</a></strong>This account is void.`;
           userResults.appendChild(div);
         }
       });
@@ -202,8 +241,6 @@
     // Sort leaderboard by time wasted
     allUsers.sort((a, b) => b.minutes - a.minutes);
 
-    // Display leaderboard
-    leaderboard.innerHTML = "";
     allUsers.forEach(user => {
       const div = document.createElement("div");
       div.className = "leaderboard-entry";
@@ -219,6 +256,7 @@
     });
 
     // Initial render
+    renderAchievements(false);
     renderSearch();
 
     // Live search
